<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="app_name">定位追踪器</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_new_device">NewDeviceActivity</string>
    <string name="title_activity_delete_device">DeleteDeviceActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_base_information_setting">BaseInformationSettingActivity</string>
    <string name="title_activity_location_frequence">LocationFrequenceActivity</string>
    <string name="title_activity_bind">BindActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="device_exist">设备已存在</string>
    <string name="new_device">添加设备</string>
    <string name="delete_device">删除选中设备</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="adddevice_timeout">等待超时，添加失败</string>
    <string name="adddevice_fail">添加设备失败</string>
    <string name="verify_fail">验证失败</string>
    <string name="password_incorrect">密码错误</string>
    <string name="query_time_error">请重新选择查询时段</string>
    <string name="trace">足迹</string>
    <string name="real_location">实时位置</string>
    <string name="history_trace">查询足迹</string>
    <string name="start_real_location">开启定位</string>
    <string name="start_real_location_no_bind">设备尚未绑定主控，开启定位失败，请先通过添加设备绑定为主控</string>
    <string name="start_real_location_pw_error">密码错误，开启实时定位失败</string>
    <string name="start_real_location_id_error">设备编号不匹配，开启定位失败，请检查设备SIM卡是否插错</string>
    <string name="stop_real_location">关闭定位</string>
    <string name="stop_real_location_no_bind">设备尚未绑定主控，关闭定位失败，请先通过添加设备绑定为主控</string>
    <string name="stop_real_location_pw_error">密码错误，关闭实时定位失败</string>
    <string name="stop_real_location_id_error">设备编号不匹配，关闭定位失败，请检查设备SIM卡是否插错</string>
    <string name="start_real_location_timeout">开启实时定位超时</string>
    <string name="stop_real_location_timeout">关闭实时定位超时</string>
    <string name="start_real_locate_success">实时定位已开启</string>
    <string name="stop_locate_success">实时定位已关闭</string>
    <string name="stop_locate_fail">关闭实时定位失败</string>
    <string name="start_locate_fail">开启实时定位失败</string>
    <string name="connection_error_real">连接错误，无法获取位置</string>
    <string name="connection_error_histroy">连接错误，无法获取足迹</string>
    <string name="connection_error_verify">连接错误，验证失败</string>
    <string name="connection_error_add">连接错误，添加设备失败</string>
    <string name="no_new_position">无定位数据</string>
    <string name="no_trace">没有足迹</string>
    <string name="new_device_title">新的设备</string>
    <string name="sim_is_empty">设备SIM卡号不能为空</string>
    <string name="password_confirm_fail">两次输入的密码不一致</string>
    <string name="no_sdcard">未找到存储卡，无法存储照片</string>
    <string name="set_lable">设置头像</string>
    <string name="set_title">设置</string>
    <string name="waiting">等待响应中</string>
    <string name="unbinded">未绑定，请输入主控号码</string>
    <string name="master_unbind">主控权限被解除</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="master_is_empty">主控号码不能为空</string>
    <string name="set_frequence_timeout">频率设置超时</string>
    <string name="set_frequence_fail">频率设置失败</string>
    <string name="set_frequence_ok">频率设置成功</string>
    <string name="set_frequence_no_bind">设备尚未绑定主控，设置频率失败，请先通过添加设备绑定为主控</string>
    <string name="set_frequence_pw_error">密码错误，频率设置失败</string>
    <string name="set_frequence_id_error">设备编号不匹配，设置频率失败，请检查设备SIM卡是否插错</string>
    <string name="bind_timeout">绑定超时</string>
    <string name="unbind_timeout">解绑超时</string>
    <string name="rebind_timeout">重新绑定主控超时</string>
    <string name="rebind_success">重绑定为主控成功</string>
    <string name="rebind_no_bind">重绑定为主控失败，设备尚未绑定任何主控，请通过添加设备绑定为主控</string>
    <string name="rebind_pw_error">密码错误，重绑定为主控失败</string>
    <string name="rebind_id_error">设备编号不匹配，重绑定为主控失败，请检查设备SIM卡和输入SIM卡号是否对应</string>
    <string name="rebind_already_is_master">你已是主控</string>
    <string name="rebind_fail">重新绑定主控失败</string>
    <string name="modify_pw_timeout">修改密码超时</string>
    <string name="modify_pw_success">密码修改成功</string>
    <string name="modify_pw_no_bind">修改密码失败，设备尚未绑定主控，请先通过添加设备绑定为主控</string>
    <string name="modify_pw_pw_error">旧密码错误，修改密码失败</string>
    <string name="modify_pw_id_error">设备编号不匹配，修改密码失败，请检查设备SIM卡是否插错</string>
    <string name="modify_pw_fail">密码修改失败</string>
    <string name="device_num_empty">设备号码为空，绑定失败</string>
    <string name="bind_ok">你的手机已成功绑定为主控</string>
    <string name="already_bind">该设备已绑定主控，绑定为主控失败</string>
    <string name="bind_fail">主控绑定失败</string>
    <string name="unbind_fail">解绑失败</string>
    <string name="unbind_ok">解绑成功</string>
    <string name="base_information">基本信息</string>
    <string name="device_lable">设备头像:</string>
    <string name="click_to_selete">点击选择头像</string>
    <string name="device_name">设备名字:</string>
    <string name="device_num">设备号码:</string>
    <string name="self_num">输入你当前使用的手机号码:</string>
    <string name="illegal_self_num">请输入你手机号码</string>
    <string name="device_password">设备密码:</string>
    <string name="confirm_password">确认密码:</string>
    <string name="name_hint">为你的设备起一个名字</string>
    <string name="sim_hint">输入设备SIM卡号</string>
    <string name="password_hint">输入六位设备密码</string>
    <string name="confirm_password_hint">请再次输入密码</string>
    <string name="input_six_password">请输入六位长度的设备密码</string>
    <string name="master">主控:</string>
    <string name="sim">SIM:</string>
    <string name="serial_number">编号:</string>
    <string name="device">设备:</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="bind_title">主控绑定</string>
    <string name="sim_exception">Sim卡异常，操作失败</string>
    <string name="binded_master">当前主控号码:</string>
    <string name="bind_hint_1">当前已绑定主控号码:</string>
    <string name="bind_hint_2">此操作将会解绑当前主控，绑定你当前手机号码为主控。</string>
    <string name="bind_to_master">绑定为主控</string>
    <string name="input_devicenum">请输入设备SIM卡号:</string>
    <string name="pick_query_time">请选择查询时段</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="frequnce_selete">选择频率</string>
    <string name="location_frequnce">定位频率:</string>
    <string name="report_frequnce">报告频率:</string>
    <string name="denied">需要主控权限</string>
    <string name="location">定位</string>
    <string name="device_list">设备列表</string>
    <string name="input_password">输入新的设备密码:</string>
    <string name="vice_password_hint">输入主控修改后的设备密码</string>
    <string name="password_title">密码设置</string>
    <string name="new_password_is_empty">新密码不能为空</string>
    <string name="title_activity_tracker_start">TrackerStartActivity</string>
    <string name="last_position">最后位置:</string>
    <string name="online">(在线)</string>
    <string name="no_response">(未响应)</string>
    <string name="unknow">(未知)</string>
    <string name="time">时间:</string>
    <string name="warning">警报:</string>
    <string name="emergency">..</string>
    <string name="device_id">设备ID:</string>
    <string name="emptyid">设备ID为空</string>
    <string name="illegalid">非法设备ID</string>
    <string name="device_non_exist">设备不存在</string>
    <string name="device_id_input_hint">输入设备ID或扫描设备二维码</string>
    <string name="scan_qrcode_hint">扫描二维码</string>
    <string name="verify_device">验证设备</string>
    <string name="low_power">您的追踪设备电量过低,请及时充电。</string>
    <string name="warning_list">警报列表</string>
    <string name="delete_warning">删除该报警</string>
    <string name="title_activity_warning">WarningActivity</string>
    <string name="scan_qrcode">将二维码放入框内，即可自动扫描</string>
    <string name="illegal_qrcode">非法的二维码</string>
    <string name="new_edition">版本更新</string>
    <string name="updatenow">现在更新</string>
    <string name="updatelater">以后再说</string>
    <string name="download_notification_title">追踪器</string>
    <string name="update_fail">新版本下载失败，请重新选择更新</string>
    <string name="title_activity_device_verify">DeviceVerifyActivity</string>
    <string name="title_activity_my_phone_number">MyPhoneNumberActivity</string>

</resources>
