<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/d20"
        android:text="@string/pick_query_time"/>
    <TextView
        android:id="@+id/tv_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d7"
        android:layout_marginTop="@dimen/d10"
        android:gravity="center_horizontal"
        android:text="@string/start_time" />
    
    <org.unism.wang.widget.DatePicker
        android:id="@+id/datepicker_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
    
    <TextView
        android:id="@+id/tv_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d7"
        android:layout_marginTop="@dimen/d7"
        android:gravity="center_horizontal"
        android:text="@string/end_time" />
    
    <org.unism.wang.widget.DatePicker
        android:id="@+id/datepicker_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
