<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/password_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/d20"
        android:layout_marginTop="@dimen/d10"
        android:text="@string/password_title"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1"
        android:background="@color/deepskyblue"
        android:layout_marginTop="@dimen/d10"
        android:layout_marginBottom="@dimen/d10"/>
    
    <TextView 
        android:id="@+id/new_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/d20"
        android:text="@string/input_password"/>
    
    <EditText 
        android:id="@+id/password_et_s"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d30"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:layout_marginTop="@dimen/d5"
        android:paddingLeft="2dp"
        android:inputType="numberPassword"
        android:background="@drawable/bordershape"/>
    
    <TextView 
        android:id="@+id/confirm_password_tv_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d20"
        android:text="@string/confirm_password"/>
    
    <EditText 
        android:id="@+id/confirm_password_et_s"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d30"
        android:layout_marginLeft="@dimen/d20"
        android:layout_marginRight="@dimen/d20"
        android:layout_marginTop="@dimen/d5"
        android:inputType="numberPassword"
        android:paddingLeft="2dp"
        android:background="@drawable/bordershape"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gainsboro"
        android:layout_marginTop="5dp"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/d40"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/password_cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/textview_selector"
            android:text="@string/cancel"/>
        <View 
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gainsboro"/>
        <TextView 
            android:id="@+id/password_ok_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/textview_selector"
            android:text="@string/ok"/>
    </LinearLayout>
    

</LinearLayout>
