<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sctek.tracker.DeviceVerifyActivity" >

    <LinearLayout 
        android:id="@+id/device_verify_lo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d110"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/d10"
            android:text="@string/device_id"/>
        <EditText 
            android:id="@+id/device_id_d"
            android:layout_width="@dimen/d200"
            android:layout_height="@dimen/d30"
            android:background="@drawable/bordershape"
            android:layout_marginLeft="@dimen/d5"
            android:paddingLeft="2dp"
            android:textSize="13dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:hint="@string/device_id_input_hint"/>
        <ImageButton 
            android:id="@+id/scan_qrcode_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:padding="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/d10"
            android:src="@drawable/qrcode_selector"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/device_verify_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_verify_lo"
        android:layout_marginTop="@dimen/d20"
        android:background="@drawable/verify_selector"
        android:padding="0dp"
        android:text="@string/verify_device"
        android:textSize="@dimen/d20"
        android:layout_centerHorizontal="true"/>
     <include 
        android:id="@+id/wait_lout_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/loading_process_dialog_anim"
        android:visibility="gone"/>

</RelativeLayout>
